# youtube-karaoke

./: .gitignore  README.md  check_genius.py  pyproject.toml
backend/: Dockerfile  __init__.py  app.py  config.py  endpoints.py  genius_client.py  lyrics_processing.py  processing.py  requirements.txt  structure.py
backend/api/v1/: __init__.py  dependencies.py  router.py
backend/api/v1/routes/: __init__.py  genius.py  process.py  progress.py  suggestions.py
backend/core/: __init__.py  audio_analyzer.py  audio_extractor.py  downloader.py  merger.py  separator.py  subtitles.py  transcriber.py
backend/schemas/: __init__.py  cache.py  enums.py  requests.py  responses.py
backend/services/: __init__.py  genius_service.py  progress_service.py
backend/utils/: file_system.py  progress_manager.py  version_tracker.py
frontend/extension/: content.js  manifest.json
frontend/mobile/android/: build.gradle  settings.gradle
frontend/mobile/android/app/: build.gradle
frontend/mobile/android/app/src/main/: AndroidManifest.xml
frontend/mobile/android/app/src/main/java/com/example/karaoke/: MainActivity.kt
frontend/mobile/ios/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
frontend/web/: index.html
frontend/web/assets/css/: base.css  layout.css  styles.css
frontend/web/assets/css/components/: genius.css  input.css  misc.css  options.css  progress.css  results.css  stems.css  theme.css
frontend/web/assets/js/: api.js  app.js  config.js  dom.js  main.js  pitch-shifter.js  stems.js  suggestions.js  theme.js  ui.js  websocket.js
