[tool.poetry]
name = "karaoke-studio"
version = "2.0.0"
description = "AI-powered karaoke generator from YouTube videos"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"

# ASGI stack
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.17"
aiofiles = "^24.1.0"

# Media download / editing
yt-dlp = ">=2024.12.6"
moviepy = "^1.0.3"
pydub = "^0.25.1"

# ML models
# Option 1: Standard Whisper (slower but stable)
openai-whisper = "^20240930"
# Option 2: Faster-whisper (4x faster, uses CTranslate2) - uncomment to use
# faster-whisper = "^1.0.3"

torch = "^2.5.0"
demucs = "^4.0.1"

# NLP / lyrics / fuzzy match
rapidfuzz = "^3.10.0"
lyricsgenius = "^3.0.1"

# Audio analysis
librosa = "^0.10.1"

# HTTP client (async-ready)
httpx = "^0.28.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"

# Linting & formatting
ruff = "^0.8.0"
mypy = "^1.13.0"

# Type stubs
types-aiofiles = "^24.1.0"

# GPU group temporarily disabled for Mac compatibility
# [tool.poetry.group.gpu]
# optional = true
#
# [tool.poetry.group.gpu.dependencies]
# # Override torch with CUDA version
# torch = {version = "^2.5.0", source = "pytorch-gpu"}
#
# [[tool.poetry.source]]
# name = "pytorch-gpu"
# url = "https://download.pytorch.org/whl/cu124"
# priority = "explicit"

[tool.poetry.scripts]
serve = "uvicorn:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ─── Ruff Configuration ───────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

# ─── MyPy Configuration ───────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "whisper.*",
    "demucs.*",
    "moviepy.*",
    "pydub.*",
    "ffmpeg.*",
    "yt_dlp.*",
]
ignore_missing_imports = true

# ─── Pytest Configuration ─────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=backend --cov-report=term-missing"

# ─── Coverage Configuration ───────────────────────────────
[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
